Commit from Mozilla Verbatim by user Devon.: 86 of 86 strings translated (0 fuzzy).

--- a/locale/af/LC_MESSAGES/messages.po
+++ b/locale/af/LC_MESSAGES/messages.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-04-08 16:08+0000\n"
-"PO-Revision-Date: 2015-03-20 12:00+0000\n"
-"Last-Translator: af-ZA09_Samuel <leuce.com@gmail.com>\n"
+"PO-Revision-Date: 2015-04-15 10:11+0000\n"
+"Last-Translator: af-ZA09_Samuel <leuce.com+rubric@gmail.com>\n"
 "Language-Team: none\n"
 "Language: af\n"
 "MIME-Version: 1.0\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1426852813.0\n"
+"X-POOTLE-MTIME: 1429092707.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16 public/js/lib/cancel.js:18 public/js/views/payment-failed.js:19
 msgid "Payment cancelled."
@@ -379,4 +379,4 @@ msgstr "Voltooi tans betaling"
 
 #: public/js/error-codes.js:12 public/js/error-codes.js:17 public/js/error-codes.js:18 public/js/error-codes.js:34 public/js/error-codes.js:13 public/js/error-codes.js:19 public/js/error-codes.js:35
 msgid "Product cannot be purchased due to configuration error."
-msgstr ""
+msgstr "Kan nie produk koop nie, weens 'n opstellingsfout."
