--- a/locale/zu/LC_MESSAGES/messages.po
+++ b/locale/zu/LC_MESSAGES/messages.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-04-08 16:08+0000\n"
-"PO-Revision-Date: 2015-03-16 11:30+0000\n"
-"Last-Translator: zu-ZA26_Lungile <bhelekazelihle@gmail.com>\n"
+"PO-Revision-Date: 2015-04-15 12:48+0000\n"
+"Last-Translator: zu-ZA25_Lungile <lungilekunene@ymail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: zu\n"
 "MIME-Version: 1.0\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1426505451.0\n"
+"X-POOTLE-MTIME: 1429102117.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16 public/js/lib/cancel.js:18 public/js/views/payment-failed.js:19
 msgid "Payment cancelled."
@@ -359,26 +359,24 @@ msgstr "Akukho kufaniswa kwamanethiwekhi"
 
 #: public/js/lib/pin-widget.js:71
 msgid "PIN too short"
-msgstr ""
+msgstr "I-PIN imfishane kakhulu"
 
 #: public/js/lib/utils.js:191
 msgid "Success"
-msgstr ""
+msgstr "Impumelelo"
 
 #: public/js/lib/utils.js:192
 msgid "Your purchase is complete. Close the window to continue"
-msgstr ""
+msgstr "Usuqedile ukuthenga. Vala ikhasi ukuze uqhubeke"
 
 #: public/js/lib/utils.js:203
-#, fuzzy
 msgid "An error occurred. Close the window to continue"
-msgstr "Kube nephutha elenzeke ngenkathi uzama ukuphuma."
+msgstr "Kube nephutha elenzekile. Vala ikhasi ukuze uqhubeke."
 
 #: public/js/views/page.js:161
-#, fuzzy
 msgid "Completing Payment"
 msgstr "Isaqedela ukukhokha"
 
 #: public/js/error-codes.js:12 public/js/error-codes.js:17 public/js/error-codes.js:18 public/js/error-codes.js:34 public/js/error-codes.js:13 public/js/error-codes.js:19 public/js/error-codes.js:35
 msgid "Product cannot be purchased due to configuration error."
-msgstr ""
+msgstr "Angeke ukwazi ukuthenga lo mkhiqizo ngenxa yephutha ekuxhumaneni."
