--- a/locale/tl/LC_MESSAGES/messages.po
+++ b/locale/tl/LC_MESSAGES/messages.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-04-08 16:08+0000\n"
+"POT-Creation-Date: 2015-04-22 21:26+0000\n"
 "PO-Revision-Date: 2015-04-22 14:20+0000\n"
 "Last-Translator: Robert <bob@mozillaph.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -29,9 +29,7 @@ msgstr "Mga bilang lang ang pwede bilang PIN."
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
-msgstr ""
-"Ikaw ay nakalogin bilang ibang user, kailangan mong magsimula muli sa "
-"proseso ng pagbabayad."
+msgstr "Ikaw ay nakalogin bilang ibang user, kailangan mong magsimula muli sa proseso ng pagbabayad."
 
 #: public/js/views/throbber.js:15 public/js/views/throbber.js:16 templates/throbber.html:7
 msgid "Loading"
@@ -380,5 +378,4 @@ msgstr ""
 
 #: public/js/error-codes.js:12 public/js/error-codes.js:17 public/js/error-codes.js:18 public/js/error-codes.js:34 public/js/error-codes.js:13 public/js/error-codes.js:19 public/js/error-codes.js:35
 msgid "Product cannot be purchased due to configuration error."
-msgstr ""
-"Ang produkto at hindi pwedeng bilhin dahil sa isang configuration error."
+msgstr "Ang produkto at hindi pwedeng bilhin dahil sa isang configuration error."
